2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Added a PersonCard with Medium height to chat
	  window

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Fixed the size of the Medium PersonCard

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonView.cs: Fixed up the way PersonCards are created so the
	  size is set accoring to the size control

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* data/Themes/ContactStyles/basic.tar.gz: Updated ContactStyleBasic to
	  support Medium Contacts Size
	* Banter/ContactStyle.cs: Added code to really load ContactSytles in
	  multiple sizes
	* Banter/PersonCard.cs: Added support to size of multiple ContactStyle
	  Sizes

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs: Changed the way the initial Everyone Group is
	  selected so it works for the init and when selected.

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ThemeManager.cs: Changed the SelectedContactStyle to try to
	  load if it is null
	* Banter/PersonCard.cs: Changed the contactStyle to be retrieved when
	  needed so an old null copy wasn't kept around

2007-05-18  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Changed the hidden delete button to just allow
	  a right-click on the group button.  Still need to implement a
	  little popup menu, but for now, you can delete a group by
	  right-clicking on it.

2007-05-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped the version to 0.1.4 for the next iteration

2007-05-18  Boyd Timothy <btimothy@gmail.com> 

	* README, NEWS: Updated for 0.1.3 release.

2007-05-18  Calvin Gaisford <calvinrg@gmail.com> 

	* data/Themes/Makefile.am: Added missing extra dist files
	* Banter/Makefile.am: Added missing Extra dist files

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Stubbed out some code for getting/setting our